优化多人同步、跨维度体验与 BOSS HUD